--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,4 @@
-version: '3.8'
-
 services:
-  # Base de données PostgreSQL
   postgres:
     image: postgres:15-alpine
     container_name: eduqr-postgres
@@ -17,10 +14,9 @@ services:
       - eduqr_network
     restart: unless-stopped
 
-  # Backend API (Go)
   backend:
     build:
-      context: ./eduqr
+      context: ./eduqr-backend
       dockerfile: Dockerfile
     container_name: eduqr-backend
     environment:
@@ -47,7 +43,6 @@ services:
       retries: 5
       start_period: 30s
 
-  # Frontend React App
   frontend:
     build:
       context: ./eduqr-frontend
@@ -61,10 +56,9 @@ services:
       - eduqr_network
     restart: unless-stopped
 
-  # Service de peuplement de données
   seed-data:
     build:
-      context: ./eduqr
+      context: ./eduqr-backend
       dockerfile: Dockerfile.seed
     container_name: eduqr-seed-data
     environment:
