--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
+version: '3.8'
+
 services:
+  # Base de données PostgreSQL
   postgres:
     image: postgres:15-alpine
     container_name: eduqr-postgres
@@ -14,6 +17,7 @@ services:
       - eduqr_network
     restart: unless-stopped
 
+  # Backend API (Go)
   backend:
     build:
       context: ./eduqr-backend
@@ -43,6 +47,7 @@ services:
       retries: 5
       start_period: 30s
 
+  # Frontend React App
   frontend:
     build:
       context: ./eduqr-frontend
@@ -56,6 +61,7 @@ services:
       - eduqr_network
     restart: unless-stopped
 
+  # Service de peuplement de données
   seed-data:
     build:
       context: ./eduqr-backend
